src/app.css
@import '@fontsource/fira-mono';

:root {
	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	--text-lightness: 90%;
	--font-mono: 'Fira Mono', monospace;
	--pure-white: #ffffff;
	--primary-color: #1a2b29;
	--secondary-color: #212e3a;
	--tertiary-color: #664e9433;
	--accent-color: rgb(216, 170, 102);
	--heading-color: hsla(0, 0%, var(--text-lightness), 0.7);
	--heading-info: hsla(0, 0%, var(--text-lightness), 0.5);
	--text-color: #dadada;
	--background-without-opacity: rgba(0, 0, 0, 0.7);
	--column-width: 42rem;
	--column-margin-top: 4rem;
}

@media print {
	* {
		color: #000 !important;
	}

	.no-print,
	.no-print * {
		display: none !important;
	}

	a {
		color: #888 !important;
		font-weight: 400 !important;
		text-decoration: none !important;
		text-shadow: none !important;
	}

	.card {
		page-break-inside: avoid;
		page-break-after: always;
		page-break-before: always;
	}
}

html,
body {
	padding: 0;
	margin: 0;
}

body {
	min-height: 100vh;
	margin: 0;
	background-color: var(--primary-color);
	color: var(--text-color);
}

body::before {
	content: '';
	width: 80vw;
	height: 100vh;
	position: absolute;
	top: 0;
	left: 10vw;
	z-index: -1;
	background: radial-gradient(
		50% 50% at 50% 50%,
		var(--pure-white) 0%,
		rgba(255, 255, 255, 0) 100%
	);
	opacity: 0.05;
}

h1,
h2,
p {
	color: var(--heading-color);
	margin: 0.5em;
}

p {
	line-height: 1.5;
}

a {
	color: var(--accent-color);
	text-decoration: none;
	text-shadow: 0 0 1px #0006, 0 0 10px #0008;
	font-weight: 900;
	transition: all 0.6s;
}

a:hover {
	text-decoration: underline;
	text-shadow: 0 0 2px #ff86;
}

h1 {
	font-size: 2rem;
	text-align: center;
}

h2 {
	font-size: 1rem;
}

pre {
	font-size: 16px;
	font-family: var(--font-mono);
	background-color: rgba(255, 255, 255, 0.45);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
	padding: 0.5em;
	overflow-x: auto;
	color: var(--text-color);
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}

button:focus:not(:focus-visible) {
	outline: none;
}

@media (min-width: 720px) {
	h1 {
		font-size: 2.4rem;
	}
}

@media (max-width: 1080px) {
	.flex-list {
		display: grid;
		grid-template-columns: repeat(1, 1fr);
		grid-gap: 2em;
	}
}

section {
	max-width: 1280px;
	margin: auto;

	padding: 2rem;
	border-radius: 1rem;
	background: hsla(0, 0%, var(--text-lightness), 0.05);
}

.flex-list {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
	grid-gap: 2em;
}

.labels {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	flex-wrap: wrap;
}

small {
	color: var(--heading-info);
}

